--- a/ChungMesonesCarlosLeePractica03/proyecto/css/formulario02.css
+++ b/ChungMesonesCarlosLeePractica03/proyecto/css/formulario02.css
@@ -1,11 +1,18 @@
 body {
     text-align: center;
-    
+    background-color: #232946;
 }
 
 input {
     margin-bottom: 10px;
     
+}
+
+body > div {
+    background-color: #d4d8f0;
+    width: 30%;
+    border-radius: 10px;
+    margin-left: 35%;
 }
 
 #correo, #pass {
