--- a/ChungMesonesCarlosLeePractica03/proyecto/css/paginaResponsivo.css
+++ b/ChungMesonesCarlosLeePractica03/proyecto/css/paginaResponsivo.css
@@ -10,20 +10,21 @@ main {
 }
 
 header {
-    background-color:  cadetblue;
+    background-color:  #ddd6d6;
     grid-area: my-header;
     text-align: center;
     vertical-align: middle;
 }
 
 header img {
-    width: 35%;
+    width: 25%;
+    margin: 10px;
     float: right;
 }
 
 header h1 {
     margin-top: 7%;
-    color: white;
+    color: #094067;
     font-size: x-large;
 }
 
@@ -34,35 +35,36 @@ header h2 {
 }
 
 nav {
-    background-color: cornflowerblue;
+    background-color: #4fc4cf;
     grid-area: my-nav;
     text-align: center;
 }
 
 section {
-    background-color: indigo;
+    background-color: #d8eefe;
     grid-area: my-section;
     column-count: 2;
     padding-top: 2%;
 }
 
 aside {
-    background-color: darkmagenta;
+    background-color: #fbdd74;
     grid-area: my-aside;
     text-align: center;
+    
 }
 
 footer {
-    background-color: antiquewhite;
+    background-color: #2e2e2e;
     grid-area: my-footer;
     text-align: center;
-    color: #000;
+    color: #fffffe;
 
 }
 
 nav a, aside a {
     text-decoration: none;
-    color: white;
+    color: #2e2e2e;;
 }
 
 a + a {
@@ -70,10 +72,10 @@ a + a {
 }
 
 .producto {
-    border: 1px solid;
+    border-radius: 10px;
     text-align: center;
-    background-color: beige;
-    color: black;
+    background-color: #fffffe;
+    color: #094067;
     
     margin-bottom: 5%;
     margin-left: 5%;
@@ -85,27 +87,67 @@ a + a {
 }
 
 .producto img {
-    width: 80%;
+    width: 70%;
 }
 
 
 @media (min-width: 600px) and (max-width: 1000px) {
     main {
         grid-template-areas: "my-header my-header" "my-nav my-nav" "my-aside my-section" "my-footer my-footer";
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 15% 85%;
+    }
+
+    section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    header h1, h2 {
+        margin: 5%;
     }
 
     header img {
-        width: 30%;
+        width: 20%;
+        margin: 10px;
     }
-    
+
+    aside {
+        padding-top: 20%;
+    }
+
+    aside a {
+        display: block;
+        margin-bottom: 10%;
+    }
 
 }
 
 @media (min-width: 1001px) {
     main {
         grid-template-areas: "my-header my-header my-header" "my-nav my-section my-aside" "my-footer my-footer my-footer";
-        grid-template-columns: 15% 70% 15%;
-        grid-template-rows: 200px 340px 80px;
+        grid-template-columns: 12% 76% 12%;
+    }
+
+    header img {
+        width: 10%;
+        margin: 10px;
+        margin-right: 5%;
+    }
+    header h1, header h2 {
+        margin: 2%;
+    }
+
+    section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    nav, aside {
+        padding-top: 20%;
+    }
+
+    a {
+        display: block;
+        margin-bottom: 10%;
     }
 }
